@@ -1,4 +1,5 @@
 4.0
+	+ Adapt firewall to reduce on remoteservices module
 	+ Set version to 4.0
 3.5
 	+ Set version to 3.5
